用户分组服务列表
